[package]
name = "flowrlib"
version = "0.61.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "Flow Runner Library (flowrlib) for 'flow' programs"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "https://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flowrlib"
path = "src/lib.rs"

[features]
default = ["wasmi_runtime"]
submission = []
context = ["flowcore/context"]
debugger = ["flowcore/debugger"] # feature to add the debugger, requires flowcore crate to have feature enabled also
metrics = []  # feature for tracking of metrics during execution
wasmi_runtime = ["wasmi"] # First WASM implementation
wasmtime_runtime = ["wasmtime", "anyhow"] # An alternative WASM implementation

[dependencies]
flowcore = {path = "../flowcore", version = "0.60.0"}
log = "0.4.6"
url = { version = "2.2", features = ["serde"] }
serde_derive = "~1.0.27"
serde = "~1.0.27"
serde_json = { version = "1.0", default-features = false }
error-chain = "0.12.2"
multimap = "~0.8"

# Optional dependencies
wasmi = { version = "0.11.0", optional = true }
wasmtime = { version = "0.38.0", default-features = false, features = ["cranelift"], optional = true }
anyhow = { version = "1.0", optional = true}

[dev-dependencies]
tempdir = "~0.3.5"
serial_test = "0.7.0"
simpath = { version = "~2.3", features = ["urls"]}
