[package]
name = "flowrlib"
description = "Flow Runner Library (flowrlib) for 'flow' programs"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flowrlib"
path = "src/lib.rs"

[features]
default = []
submission = []
context = ["flowcore/context"]
debugger = ["flowcore/debugger"] # feature to add the debugger, requires flowcore crate to have feature enabled also
metrics = []  # feature for tracking of metrics during execution

[dependencies]
flowcore = {path = "../flowcore", version = "0.70.0", features = ["file_provider", "http_provider",
"context", "meta_provider"]}
log = "0.4.6"
url = { version = "2.2", features = ["serde"] }
serde_derive = "~1.0.27"
serde = "~1.0.147"
serde_json = { version = "1.0", default-features = false }
error-chain = "0.12.2"
multimap = "~0.8"
rand = "0.8"
wasmtime = { version = "2.0.1", default-features = false, features = ["cranelift"] }
zmq = "0.9.2"
simpdiscover = {path = "../../simpdiscover", version = "0.5.1"}

[dev-dependencies]
tempdir = "~0.3.5"
serial_test = "0.9.0"
simpath = { version = "~2.3", features = ["urls"]}
portpicker = "0.1.1"

