[package]
name = "flowrstructs"
version = "0.20.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "Structures shared between runtime and clients"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2018"

# Files to exclude from packaging and publishing
exclude = [".gitignore", "Cargo.lock"]

[lib]
name = "flowrstructs"
path = "src/lib.rs"

[features]
default = []  # Don't include any extra features by default
debugger = [] # feature to add the debugger

[dependencies]
flow_impl = {path = "../flow_impl"}
provider = {path = "../provider"}
serde = "~1.0.27"
serde_derive = "~1.0.27"
serde_json = "1.0"
error-chain = "0.12.2"
log = "0.4.6"
