[package]
name = "flowsamples"
description = "A set of sample 'flow' programs"
build = "build.rs"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "flowsamples"
path = "main.rs"

[features]
default = []
wasm = []

[dependencies]
tempdir = "0.3"

[dev-dependencies]
serial_test = "1.0.0"
