[package]
name = "flowstdlib"
version = "0.40.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "The standard library of functions and flows for 'flow' programs"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2021"
build = "build.rs"

# Files to exclude from packaging and publishing
exclude = [".gitignore", "Cargo.lock"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "flowstdlib"
path = "main.rs"

[lib]
name = "flowstdlib"
path = "lib.rs"

[features]
default = []
wasm = []

[dependencies]
flow_impl_derive = {path = "../flow_impl_derive", version = "0.40.0" }
flowcore = {path = "../flowcore", version = "0.40.0" }
simpath = { version = "~2.3", features = ["urls"]}
url = { version = "2.2", features = ["serde"] }
serde_json = "1.0"
image = "=0.23.10"
error-chain = "0.12.2"

[build-dependencies]
simpath = { version = "~2.3", features = ["urls"]}
url = { version = "2.2", features = ["serde"] }
