[package]
# Don't inherit from workspace as this is parsed by flowc for MetaData and it is not workspace inheritance aware
name = "flowstdlib"
description = "The standard library of functions and flows for 'flow' programs"
version = "0.61.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
# Inherit the others that is not parsed by flowc
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true

build = "build.rs"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "flowstdlib"
path = "main.rs"

[lib]
name = "flowstdlib"
path = "lib.rs"

[features]
default = []
wasm = []

[dependencies]
flowmacro = {path = "../flowmacro", version = "0.61.0" }
flowcore = {path = "../flowcore", version = "0.61.0" }
simpath = { version = "~2.3", features = ["urls"]}
url = { version = "2.2", features = ["serde"] }
serde_json = "1.0"
error-chain = "0.12.2"

[dev-dependencies]
tempdir = "~0.3.5"

[build-dependencies]
simpath = { version = "~2.3", features = ["urls"]}
url = { version = "2.2", features = ["serde"] }
