[package]
# Don't inherit from workspace as this is parsed by flowc for MetaData and it is not workspace inheritance aware
name = "flowstdlib"
description = "The standard library of functions and flows for 'flow' programs"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
# Inherit the others that is not parsed by flowc
version.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true

build = "build.rs"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "flowstdlib"
path = "src/main.rs"

[lib]
name = "flowstdlib"
path = "src/lib.rs"

[features]
default = []
wasm = []

[dependencies]
flowmacro = {path = "../flowmacro", version = "0.80.0" }
flowcore = {path = "../flowcore", version = "0.80.0" }
simpath = { version = "~2.3", features = ["urls"]}
url = { version = "2.2", features = ["serde"] }
serde_json = "1.0"
error-chain = "0.12.2"

[dev-dependencies]
tempdir = "~0.3.5"
flowcore = {path = "../flowcore", version = "0.80.0"}
flowmacro = {path = "../flowmacro", version = "0.80.0"}
serde_json = { version = "1.0", default-features = false }

[build-dependencies]
simpath = { version = "~2.3", features = ["urls"]}
url = { version = "2.2", features = ["serde"] }
