[package]
name = "nodeprovider"
version = "0.1.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "A content provider for 'flow' for web runtimes"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"

edition = "2018"

[dependencies]
flowrlib = "=0.8.2"
log = {version = "0.4.6", features = ["std"]}
error-chain = "0.12.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Directory",
  "FileReader",
  "FileReaderSync",
  "console",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]