[package]
name = "provider"
version = "0.8.8"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "A content provider for 'flow' tools"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2018"

[features]
default = []
online_tests = []

[dependencies]
flowrlib = {path = "../flowrlib"}

log = "0.4.6"
url = "~2.1"
curl = "~0.4.24"
simpath = "~1.3"
error-chain = "0.12.2"