[package]
name = "provider"
version = "0.34.7"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "A content provider for 'flow' tools"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2018"

[features]
default = []
online_tests = []

[dependencies]
log = "0.4.6"
url = { version = "2.2", features = ["serde"] }
curl = "~0.4"
simpath = { version = "~2.3", features = ["urls"]}
error-chain = "0.12.2"
