[package]
name = "runtime"
version = "0.8.2"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "A set of run-time functions 'flow' programs"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2018"

[lib]
name = "runtime"
path = "lib.rs"

[dependencies]
flow_impl = "=0.8.5"
flowrlib = {path = "../flowrlib"}
simplog = "~1.2"
log = "0.4.6"
url = "~2.1"
serde_json = "1.0"
error-chain = "0.12.1"