[package]
name = "flowsamples"
version = "0.30.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
readme = "README.md"
description = "A set of sample 'flow' programs"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/samples/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
edition = "2018"

build = "build.rs"

# Avoid a bunch of files that are generated as part of the samples building and/or running
exclude = ["**/*.dump", "**/*.err", "**/*.dot", "**/*.svg", "manifest.json", "failed.output", "Cargo.lock",
           ".gitignore"]

[[bin]]
name = "flowsamples"
path = "main.rs"

[build-dependencies]
flowc = {path = "../flowc", version = "0.25.0" }
simpath = "~1.4"

[dependencies]
simpath = "~1.4"

[dependencies.flowr]
path = "../flowr"
version = "0.25.0"
features = ["debugger", "metrics", "checks"]

[dev-dependencies]
serial_test = "0.5.0"

