[package]
name = "web"
version = "0.1.0"
authors = ["Andrew Mackenzie"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# flowclib = { path = "../flowclib", version = "~0.7.0" }
flowrlib = { path = "../flowrlib", version = "~0.7.0" }
flowstdlib = { path = "../flowstdlib", version = "~0.7.0" }
wasm-bindgen = "0.2.29"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
