[package]
name = "webprovider"
version = "0.1.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "A content provider for 'flow' for web runtimes"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "https://github.com/andrewdavidmackenzie/flow/README.md"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "https://github.com/andrewdavidmackenzie/flow/README.md"

[dependencies]
flowrlib = { path = "../flowrlib", version = "~0.7.0" }
log = {version = "0.4.6", features = ["std"]}

[dependencies.web-sys]
version = "0.3"
features = [
  "Directory",
  "FileReader",
  "console",
]