[package]
name = "flowr-utilities"
description = "A set of utilities for tests and examples"
version = "1.0.0"
readme = "README.md"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
tempfile = "3"

[lib]
name = "utilities"
path = "src/lib.rs"
