[package]
name = "mandlebrot"
description = "A standalone rust project for generating a Mandlebrot PNG image"
version = "0.11.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"

[[bin]]
name="mandlebrot"
path = "main.rs"

[dependencies]
flow_impl = "=0.10.0"
flow_impl_derive = "=0.10.0"
serde_json = "1.0"
num = "0.3.0"
image = "=0.23.10"
rayon = "*"
tempdir = "*"
dir-diff = "*"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[workspace]
exclude = ["../.."]