[package]
name = "mandlebrot"
description = "A standalone rust project for generating a Mandlebrot PNG image"
version = "0.11.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"

[[bin]]
name="mandlebrot"
path = "main.rs"

[dependencies]
flowcore = "=0.34.8"
flow_impl_derive = "0.40"
serde_json = "1.0"
num = "0.4.0"
image = "=0.23.10"
rayon = "*"
tempdir = "*"
dir-diff = "*"

[workspace]
exclude = ["../.."]